<resources>
    <string name="app_name">Pickle</string>
    <string name="food_name">Food name</string>
    <string name="add_food">Add food</string>
    <string name="choose_food_group">Food group</string>
    <string name="edit_button">Edit Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="submit">Submit</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="delete_meal">Delete Meal</string>
    <string name="meal_name_label">Meal Name:</string>
    <string name="meal_date_label">Meal Date:</string>
    <string name="meal_rating_label">Meal Rating:</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_meal_activity">Add A New Meal</string>
    <string name="add">Add</string>
    <string name="foods">Foods</string>
    <string name="home">Home</string>
    <string name="wk_overview">Overview for the past 7 days</string>
    <string name="mnth_overview">Overview for the past month</string>
    <string name="stats">Stats</string>
</resources>
